--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- ==============jersey================ -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet</artifactId>
@@ -50,21 +51,24 @@
 			<artifactId>jersey-server</artifactId>
 			<version>${jerseyVersion}</version>
 		</dependency>
-<!-- 		<dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-processing</artifactId>
-			<version>${jerseyVersion}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>${jerseyVersion}</version>
-		</dependency> -->
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-moxy</artifactId>
 			<version>${jerseyVersion}</version>
 		</dependency>
+		<!-- ==============jersey================ -->
+		<!-- ==============Hibernate================ -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.4.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>4.3.4.Final</version>
+		</dependency>
+		<!-- ==============Hibernate================ -->
 	</dependencies>
 
 	<build>
