--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,21 @@
 			<version>4.3.4.Final</version>
 		</dependency>
 		<!-- ==============Hibernate================ -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.29</version>
+		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
